--- a/PAGES/acerca-de-nosotros.html
+++ b/PAGES/acerca-de-nosotros.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,16 +18,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="./PAGES/acerca-de-nosotros.html">Acerca de nosotros</a></li>
-            <li><a class="dropdown-item" href="./PAGES/contacto.html">Contacto</a></li>
-            <li><a class="dropdown-item" href="./PAGES/sucursales.html">Sucursales</a></li>
+            <li><a class="dropdown-item" href="./acerca-de-nosotros.html">Acerca de nosotros</a></li>
+            <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
+            <li><a class="dropdown-item" href="./sucursales.html">Sucursales</a></li>
           </ul>
         </li>
       </ul>
