--- a/PAGES/sucursales.html
+++ b/PAGES/sucursales.html
@@ -25,7 +25,7 @@
             Más
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="./acerca-de-nosotros.html">Acerca de nosotros</a></li>
+            <li><a class="dropdown-item" href="./nuestros-servicios.html">Acerca de nosotros</a></li>
             <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
             <li><a class="dropdown-item" href="./sucursales.html">Sucursales</a></li>
           </ul>
