--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Más
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="./PAGES/nuestros-servicios.html">Acerca de nosotros</a></li>
+            <li><a class="dropdown-item" href="./PAGES/nuestros-servicios.html">Nuestros servicios</a></li>
             <li><a class="dropdown-item" href="./PAGES/contacto.html">Contacto</a></li>
             <li><a class="dropdown-item" href="./PAGES/sucursales.html">Sucursales</a></li>
           </ul>
