solo fattan listas y mapas

--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -7,6 +7,7 @@
     <title>Contacto</title>
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" href="../CSS/index.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -25,7 +26,7 @@
             Más
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="./nuestros-servicios.html">Acerca de nosotros</a></li>
+            <li><a class="dropdown-item" href="./nuestros-servicios.html">Nuestros servicios</a></li>
             <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
             <li><a class="dropdown-item" href="./sucursales.html">Sucursales</a></li>
           </ul>
@@ -39,8 +40,8 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 <div class="b-example-divider"></div>
 <div class="container">
-  <h1>Quiero ser contactado</h1>
-<form  >
+  <h1 class="titulo-principal">Quiero ser contactado</h1>
+<form class="formulario">
 <p>
 <label for="nombre">Nombre y Apellido:</label>
   </p>
@@ -67,9 +68,10 @@
   <br>
   <input type="submit" value="Enviar">
 </form>
-<p>
-	Click the "Enviar" para finalizar, serás contactado a la brevedad.
+<p class="p">
+	Click en "Enviar" para finalizar, serás contactado a la brevedad.
 </p>
+
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
@@ -78,7 +80,7 @@
       </a>
       <span class="text-muted">&copy; 2022 Olafur Electricidad</span>
     </div>
-    <div>
+    <div class="divfooter">
       Teléfono: 0800-00000
     </div>
 
