--- a/PAGES/nuestros-servicios.html
+++ b/PAGES/nuestros-servicios.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/index.css">
     <title>Nuestros servicios</title>
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -25,7 +26,7 @@
             Más
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="./nuestros-servicios.html">Acerca de nosotros</a></li>
+            <li><a class="dropdown-item" href="./nuestros-servicios.html">Nuestros servicios</a></li>
             <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
             <li><a class="dropdown-item" href="./sucursales.html">Sucursales</a></li>
           </ul>
@@ -40,36 +41,20 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
 <div class="b-example-divider">
-
-<h1 class="titulo-principal">Olafur Electricidad</h1>
-
+<h1 class="titulo-principal">Nuestros servicios</h1>
 </div>
-<div>
-  Teléfono: 0800-00000
+<div class="listas">
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
 </div>
-
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-
 
 
 <div class="b-example-divider"></div>
@@ -81,6 +66,9 @@
         <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
       </a>
       <span class="text-muted">&copy; 2022 Olafur Electricidad</span>
+    </div>
+    <div class="divfooter">
+      Teléfono: 0800-00000
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
