--- a/PAGES/sucursales.html
+++ b/PAGES/sucursales.html
@@ -4,55 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/index.css">
     <title>Sucursales</title>
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">SPA</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../index.html"><i class="bi bi-house"> Home</i></a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Más
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="./nuestros-servicios.html">Acerca de nosotros</a></li>
-            <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
-            <li><a class="dropdown-item" href="./sucursales.html">Sucursales</a></li>
-          </ul>
-        </li>
-      </ul>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Olafur electricidad</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html"><i class="bi bi-house"> Home</i></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Más
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="./nuestros-servicios.html">Nuestros servicios</a></li>
+              <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
+              <li><a class="dropdown-item" href="./sucursales.html">Sucursales</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-<div class="b-example-divider">
-
-  <h1 class="titulo-principal">Olafur Electricidad</h1>
+  </nav>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   
+  <div class="b-example-divider">
+  
+    <h1 class="titulo-principal">Nuestras Sucursales</h1> 
   </div>
   
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="...">
+        <h2 class="sucursales">Sucursal 1</h2>
+
+  <figure>
+    <img src="../MULTIMEDIA/IMAGEN1.jpg" class="d-block w-100" alt="suc1">
+    <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+  </figure>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <h2 class="sucursales">Sucursal 2</h2>
+
+        <figure>
+          <img src="../MULTIMEDIA/IMAGEN2.jpg" class="d-block w-100" alt="suc2">
+          <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+        </figure>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <h2 class="sucursales">Sucursal 3</h2>
+
+  <figure>
+    <img src="../MULTIMEDIA/IMAGEN3.jpg" class="d-block w-100" alt="suc3">
+    <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+  </figure>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -64,9 +81,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-  
-  
-  
+    
   <div class="b-example-divider"></div>
   
   <div class="container">
@@ -77,7 +92,7 @@
         </a>
         <span class="text-muted">&copy; 2022 Olafur Electricidad</span>
       </div>
-      <div>
+      <div class="divfooter">
         Teléfono: 0800-00000
       </div>
   
@@ -100,6 +115,5 @@
       </svg>
     </footer>
   </div>
-
 </body>
 </html>
