--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="./index.html">O</a>
+    <a class="navbar-brand" href="./index.html">Olafur electricidad</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -46,13 +46,13 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../CLASE06/Img/doc.webp" class="d-block w-100" alt="...">
+        <img src="./MULTIMEDIA/IMAGEN1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../CLASE06/Img/doc.webp" class="d-block w-100" alt="...">
+        <img src="./MULTIMEDIA/imagen2.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="../CLASE06/Img/doc.webp" class="d-block w-100" alt="...">
+        <img src="./MULTIMEDIA/IMAGEN3.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -63,9 +63,6 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-    <figcaption>
-      <img src="" alt="">
-    </figcaption>
   </div>
   
 <h1 class="titulo-principal">Acerca de nosotros</h1>
