--- a/PAGES/sucursales.html
+++ b/PAGES/sucursales.html
@@ -51,23 +51,23 @@
         <h2 class="sucursales">Sucursal 1</h2>
 
   <figure>
-    <img src="../MULTIMEDIA/IMAGEN1.jpg" class="d-block w-100" alt="suc1">
-    <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+    <img src="../MULTIMEDIA/MAPA1.jpg" class="d-block w-100" alt="suc1">
+    <figcaption>Sucursal 1, San Martin 4599, Rosario, Santa Fe.</figcaption>
   </figure>
       </div>
       <div class="carousel-item">
         <h2 class="sucursales">Sucursal 2</h2>
 
         <figure>
-          <img src="../MULTIMEDIA/IMAGEN2.jpg" class="d-block w-100" alt="suc2">
-          <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+          <img src="../MULTIMEDIA/MAPA2.jpg" class="d-block w-100" alt="suc2">
+          <figcaption>Sucursal 2, Cordoba 1950, Rosario, Santa Fe.</figcaption>
         </figure>
       </div>
       <div class="carousel-item">
-        <h2 class="sucursales">Sucursal 3</h2>
+        <h2 class="sucursales">Sucursal 3, Nansen 255, Rosario, Santa Fe.</h2>
 
   <figure>
-    <img src="../MULTIMEDIA/IMAGEN3.jpg" class="d-block w-100" alt="suc3">
+    <img src="../MULTIMEDIA/MAPA3.jpg" class="d-block w-100" alt="suc3">
     <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
   </figure>
       </div>
