--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -9,10 +9,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="../CSS/index.css">
 </head>
-<body>
+<body class="body-gral">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Olafur Electricidad</a>
+    <a class="navbar-brand" href="../index.html">Olafur Electricidad</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -40,7 +40,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 <div class="b-example-divider"></div>
 <div class="container">
-  <h1 class="titulo-principal">Quiero ser contactado</h1>
+  <h1 class="titulo-principal">Mas info del servicio</h1>
 <form class="formulario">
 <p>
 <label for="nombre">Nombre y Apellido:</label>
