--- a/PAGES/sucursales.html
+++ b/PAGES/sucursales.html
@@ -9,10 +9,10 @@
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
+<body class="body-gral">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Olafur electricidad</a>
+      <a class="navbar-brand" href="../index.html">Olafur electricidad</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -48,27 +48,27 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <h2 class="sucursales">Sucursal 1</h2>
+        <h3 class="sucursales">Sucursal 1</h3>
 
   <figure>
     <img src="../MULTIMEDIA/MAPA1.jpg" class="d-block w-100" alt="suc1">
-    <figcaption>Sucursal 1, San Martin 4599, Rosario, Santa Fe.</figcaption>
+    <figcaption>San Martin 4599, Rosario, Santa Fe.</figcaption>
   </figure>
       </div>
       <div class="carousel-item">
-        <h2 class="sucursales">Sucursal 2</h2>
+        <h3 class="sucursales">Sucursal 2</h2>
 
         <figure>
           <img src="../MULTIMEDIA/MAPA2.jpg" class="d-block w-100" alt="suc2">
-          <figcaption>Sucursal 2, Cordoba 1950, Rosario, Santa Fe.</figcaption>
+          <figcaption>Cordoba 1950, Rosario, Santa Fe.</figcaption>
         </figure>
       </div>
       <div class="carousel-item">
-        <h2 class="sucursales">Sucursal 3, Nansen 255, Rosario, Santa Fe.</h2>
+        <h3 class="sucursales">Sucursal 3</h2>
 
   <figure>
     <img src="../MULTIMEDIA/MAPA3.jpg" class="d-block w-100" alt="suc3">
-    <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+    <figcaption>Nansen 255, Rosario, Santa Fe.</figcaption>
   </figure>
       </div>
     </div>
