--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="./CSS/index.css">
 </head>
-<body>
+<body class="body-gral">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="./index.html">Olafur electricidad</a>
@@ -68,6 +68,17 @@
 <h1 class="titulo-principal">Acerca de nosotros</h1>
   <p class="acercadenosotros">
     Ofrecemos soluciones de mantenimiento eléctrico personalizadas en función de la actividad que llevan a cabo nuestros clientes, teniendo en cuenta las instalaciones y los requerimientos de la prestación. La diversidad de soluciones se encuentra atravesada por un mismo compromiso con la calidad, la seguridad y el medio ambiente.
+  </p>
+  <h3 class="sucursales">¿Qué hacemos?</h3>
+  <p class="acercadenosotros">
+    El mantenimiento eléctrico preventivo y correctivo se refiere a la realización de inspecciones rutinarias, pruebas y servicios en el equipo eléctrico, para que se puedan detectar, reducir o suprimir problemas inminentes en dichos equipos. La intención de realizar un programa de mantenimiento eléctrico preventivo en un equipo eléctrico es la de reducir el riesgo de accidentes como resultado de fallos en el sistema y equipos eléctricos, ya que un mantenimiento preventivo bien desarrollado, reduce accidentes y con ello el peligro de muertes; además, minimiza costosos parones no programados y tiempos caídos de producciones.
+  </p>
+  <p class="acercadenosotros">
+    Sin embargo, el mantenimiento eléctrico correctivo se basa en la corrección de las averías o disparos cuando éstas se presentan, y no de forma planificada, al contrario que el mantenimiento preventivo; por ello impide el diagnostico fiable de las causas que provocan el fallo, pues se ignora si se ocasionó por mal trato, abandono, desconocimiento del manejo, desgaste natural… Como ejemplo de este tipo de mantenimiento correctivo no planificado es habitual la reparación urgente tras una avería que obligó a detener el equipo o máquina dañada.
+  </p>
+  <p class="acercadenosotros">
+    Para mas info visita nuestra pestaña de <a href="./PAGES/contacto.html">contacto</a>.
+    También puedes acercarte a cualquiera de nuestras <a href="./PAGES/sucursales.html">sucursales</a> para una atencion mas personalizada.
   </p>
   <div class="b-example-divider"></div>
   
