--- a/PAGES/nuestros-servicios.html
+++ b/PAGES/nuestros-servicios.html
@@ -44,16 +44,18 @@
 <h1 class="titulo-principal">Nuestros servicios</h1>
 </div>
 <div class="listas">
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
+  <img src="../MULTIMEDIA/tablero_electrico_2.jpg" align="right" height="270" alt="Tablero">
+  <li>Diseño y armado de tableros eléctricos</li>
+  <li>Instalación de puestos de trabajo</li>
+  <li>Puesta a tierra</li>
+  <li>Data Center</li>
+  <li>Mantenimiento</li>
+  <li>Reestructuraciones</li>
+  <li>Instalaciones de energía crítica</li>
+  <li>Tendidos eléctricos de baja y media potencia</li>
+  <li>Mantenimiento de equipos electricos</li>
+  <li>Mantenimiento de motogeneradores</li>
+  <li>Protección Catódica general</li>
 </div>
 
 
