--- a/PAGES/sucursales.html
+++ b/PAGES/sucursales.html
@@ -45,7 +45,7 @@
     <h1 class="titulo-principal">Nuestras Sucursales</h1> 
   </div>
   
-  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="height: 450px;">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <h3 class="sucursales">Sucursal 1</h3>
