modificaciones en el texto

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   
 <h1 class="titulo-principal">Acerca de nosotros</h1>
   <p class="acercadenosotros">
-    Ofrecemos soluciones de mantenimiento eléctrico preventivo o correctivo personalizadas en función de la actividad que llevan a cabo nuestros clientes, teniendo en cuenta las instalaciones y los requerimientos de la prestación. La diversidad de soluciones se encuentra atravesada por un mismo compromiso con la calidad, la seguridad y el medio ambiente.
+    Ofrecemos soluciones de mantenimiento eléctrico preventivo o correctivo personalizadas en función de la actividad que llevan a cabo nuestros clientes, teniendo en cuenta las instalaciones y los requerimientos de la prestación. La diversidad de soluciones se encuentra atravesada por un mismo compromiso de calidad, seguridad y medio ambiente.
   </p>
   <h3 class="sucursales">¿Qué hacemos?</h3>
   <p class="acercadenosotros">
@@ -78,7 +78,7 @@
   </p>
   <p class="acercadenosotros">
     Para mas info visita nuestra pestaña de <a href="./PAGES/contacto.html">contacto</a>.
-    También puedes acercarte a cualquiera de nuestras <a href="./PAGES/sucursales.html">sucursales</a> para una atencion mas personalizada.
+    También puedes acercarte a cualquiera de nuestras<a href="./PAGES/sucursales.html">sucursales</a>para una atención más personalizada.
   </p>
   <div class="b-example-divider"></div>
   
