conecto la database

--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -41,7 +41,7 @@
 <div class="b-example-divider"></div>
 <div class="container">
   <h1 class="titulo-principal">Mas info del servicio</h1>
-<form class="formulario">
+<form action="./contacto.html" method="post" class="formulario">
 <p>
 <label for="nombre">Nombre y Apellido:</label>
   </p>
